# structsvm

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  deploy.yaml
structsvm/: __init__.py  bundle_method.py  config.py  hamming_costs.py  linear_costs.py  soft_margin_loss.py
structsvm/tests/: test_bundle_method.py  test_ssvm.py
tests/: test_bundle_method.py  test_ssvm.py
